# revenium

./: .gitignore  Anchor.toml  BUN.md  Cargo.toml  README.md  action.md  minimum.md  package.json  tsconfig.json
app/: index.html  package.json  tsconfig.json
app/src/: App.tsx  main.tsx  polyfills.ts  styles.d.ts  vite-env.d.ts
app/src/components/: ConfigPanel.tsx  FaucetButton.tsx  OverviewMetrics.tsx  ProofOfWorkCard.tsx  StakingForm.tsx  ToastHost.tsx  WalletConnectButton.tsx
app/src/config/: appConfig.ts
app/src/hooks/: useFaucet.ts  useProofOfWork.ts  useRecordProof.ts  useSkillStakeData.ts  useSkillStakeProgram.ts  useSkillStakeWallet.ts  useStake.ts  useToast.ts  useUserEligibility.ts
app/src/idl/: skill_stake.json
app/src/pages/: Dashboard.tsx
app/src/providers/: SolanaProvider.tsx
app/src/state/: atoms.ts
app/src/styles/: global.css
app/src/utils/: seeds.ts  token.ts  u64.ts
oracle/: package.json  tsconfig.json
oracle/src/: server.ts
programs/skill_stake/: Cargo.toml
programs/skill_stake/src/: lib.rs
scripts/: airdrop_faucet.ts  devnet_init.ts  set_mint_authority.ts
