[package]
name = "skill_stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
